# agentic-rag-backend

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Dockerfile  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  frontend-ci.yml  frontend-v2-ci.yml
app/: main.py
app/agent/: graph.py  nodes.py  state.py
app/api/: assisted_learning.py  auth_dev.py  chat.py  feedback.py  normalize.py  openai_compat.py  quiz.py  recommendations.py  schemas.py  sources.py  suggestions.py  threads.py  whats_new.py
app/core/: auth.py  config.py  logging.py  thread_store.py  tracing.py
app/news/: __init__.py  protocol.py
app/quiz/: __init__.py  generate.py
app/rag/: __init__.py  merge.py  protocol.py
app/recommendations/: __init__.py  summarize.py
app/suggestions/: __init__.py  followup.py  starter.py
app/whats_new/: __init__.py  enrich.py
docs/: agent_context.md  api_reference.md  auth_dev.md  backend_cicd.md  backend_v2.md  backend_v2_dev.md  deploy.md  e2e_test_plan.md  features_v1.md  features_v2.md  features_v3.md  features_v4.md  features_v5.md  features_v6.md  frontend_architecture.md  frontend_assistant_ui_plan.md  frontend_cicd.md  frontend_handoff_rag.md  partner_api.md  planning.md  rag_bot_events_enrichment.md  rag_integration.md
frontend/: .dockerignore  Dockerfile  biome.json  docker-compose.yml  middleware.ts  next.config.ts  package-lock.json  package.json
frontend-mobile/: .env.example  .gitignore  Dockerfile  docker-compose.yml  next.config.ts  package-lock.json  package.json
frontend-mobile/app/: globals.css  layout.tsx  page.tsx
frontend-mobile/lib/: api.ts  auth.ts  citations.ts  sse.ts
frontend-v1/: .env.example  .gitignore  README.md  biome.json  package-lock.json  package.json  playwright.config.ts  playwright.firefox.config.ts  proxy.ts  tsconfig.json
frontend-v1/app/: MyRuntimeProvider.tsx  layout.tsx  page.tsx
frontend-v1/lib/: assisted-learning.ts  auth-client.ts  auth-store.ts  backend-threads.ts  chat-store.ts  clerk.ts
frontend-v2/: .env.example  biome.json  middleware.ts  package-lock.json  package.json  playwright.config.ts  vitest.config.ts
frontend-v2/app/: assistant.tsx  layout.tsx
frontend-v2/lib/: chatApi.ts  (+1 more)
mcp-retrieval/: config.py  pyproject.toml  server.py
mcp-retrieval/retrieval/: embedder.py  milvus.py  pipeline.py  reranker.py
mobile-v3/: .gitignore  metro.config.js  package-lock.json  package.json  playwright.config.ts
scripts/: build-backend-image.sh  dev-backend.sh  smoke-unified-retrieval.sh  test_logto_auth_flows.sh  test_retrieval.py  test_thread_api.sh
tests/: conftest.py  test_auth.py  test_auth_dev_mode.py  test_health.py  test_news_feed.py  test_openai_compat.py  test_rag_behavior.py  test_sources_and_deep_dive.py  test_suggestions.py  test_thread_auth_phase2.py  test_thread_store_reconnect.py  test_threads.py  test_walkthrough.py  test_whats_new.py
(+115 files in other folders)
