[project]
name = "agentic-rag-backend"
version = "0.1.0"
description = "Agentic RAG backend with LangGraph, FastAPI, and Langfuse observability"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "langchain>=0.3",
    "langchain-openai>=0.3",
    "langgraph>=0.3",
    "langfuse>=3",
    "pydantic>=2",
    "pydantic-settings>=2",
    "python-dotenv>=1",
    "sse-starlette>=2",
    "langgraph-checkpoint-postgres>=3",
    "psycopg[binary]>=3",
    "PyJWT[crypto]>=2.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "ruff>=0.8",
    "cryptography>=41.0",
    "pre-commit>=3",
]
# Opt-in RAG provider. Install with: pip install -e '.[rag_bot]'
# rag_bot lives in a sibling repo; reference it there via an editable install:
#   pip install -e /mnt/data/rag_bot[langchain]
# It is listed here only for discoverability; the editable path is managed
# outside of pyproject so the backend stays decoupled from rag_bot versions.
rag_bot = []

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

# Repo root holds sibling dirs (exp/, data/, frontend-v2/, mobile-v3/, etc.).
# Scope the package to `app` so setuptools' flat-layout autodiscovery
# doesn't choke on the siblings.
[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["tests*", "exp*", "data*", "docs*", "scripts*", "venv*"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
