[project]
name = "mcp-retrieval"
version = "0.1.0"
description = "MCP server exposing DDM domain knowledge retrieval tools"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0.0",
    "pymilvus>=2.5.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
